samples/_failures_safe/1761451857_00095a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b541a3a.c: In function ‘main’:
./samples/SAFE/__tmp_5b541a3a.c:149:30: error: expected ‘)’ at end of input
  149 |         if (filter_level == 5
      |            ~                 ^
      |                              )
./samples/SAFE/__tmp_5b541a3a.c:149:9: error: expected declaration or statement at end of input
  149 |         if (filter_level == 5
      |         ^~
./samples/SAFE/__tmp_5b541a3a.c:149:9: error: expected declaration or statement at end of input
